        - Refactored the ImmutableDate class since comparison operations
          ("after", etc) may fail. Reported by Mike Brzozowski.
        - Fixed bug in InputEntityStream when entity was containing '0' 
          bytes.
        - Fixed instantion of application with a child context when 
          deployed in a servlet container. Reported by Vincent Ricard.
    - API Enhancements
        - Added warning message when no client connector supports the 
          request's protocol.
        - Added the ability to provide Wadl documentation to any 
          Restlet instances.
        - Added an org.restlet.data.Digest class, a "digest" property 
          to Representation and a DigestService for applications. 
          Suggested by Chris Winters and Benoit Maujean.
        - Filtered broken connection based on French messages in 
          addition to English ones.
        - Vastly improved internal client performances on GET.
        - Status#toString() now appends the description if available 
          for more meaningful messages.
        - Added Representation#exhaust() method to read and discard 
          content optimally (better than getText()).
        - Now a Reference that gets some invalid URI characters will
          automatically encode those characters instead of throwing
          an IllegalArgumentException. A message will still be logged
          with a "fine" level. Suggested by Brad Peabody.
    - NRE and Extension Enhancements
        - Refactored WADL extension based on John Logsdon's feed-back.
          Added convenience methods and constructors on FaultInfo, 
          MethodInfo and RepresentationInfo. Removed unecessary methods
          on WadlResource like getRepresentationInfo(Variant) and
          getParametersInfo(RequestInfo|ResponseInfo|Representation-
          Info). Added MethodInfo#add*() short-cut methods.
    - Misc
        - Updated Grizzly to version 1.8.4.
    
- 1.1 Milestone 5 (2008-08-07)
    - Security warning